--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
+@font-face {
+  font-family: "tourney";
+  src: url(Tourney-Medium.ttf);
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: #353535;
+}
+
+.secondary {
+  background-color: #070707;
+}
+
+/* .blue-border {
+  border: solid 2px #2d8dff;
+} */
+
+.text-color {
+  color: #a1a1a1;
+}
+
+.img-color {
+  background-color: #4c5154;
+}
+
+.r10 {
+  border-radius: 5px !important;
+}
+
+.title {
+  color: #fff;
+  font-size: 6rem;
+  font-family: "tourney";
+}
+
+.search-input {
+  background-color: rgba(221, 19, 19, 0.6);
+  border: solid 1px #dd1313;
+  color: #eee;
+  border-radius: 5px;
+  width: 40vw;
+}
+
+.search-input:focus {
+  outline: none;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
