--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
 
 .title {
   color: #fff;
-  font-size: 6rem;
+  font-size: 3rem;
   font-family: "tourney";
 }
 
@@ -55,4 +55,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.main-wrapper {
+  overflow: hidden;
+  height: 100vh;
+}
+
+.top-section {
+  height: 30vh;
 }
